--- a/app/assets/css/_mixins.css
+++ b/app/assets/css/_mixins.css
@@ -1,15 +1,15 @@
 /*清除浮动*/
 @define-mixin clearfix { 
-	&:before,
-	&:after {
-		content: "";
-		display: table;
-	}
-	&:after {
-		clear: both;
-		overflow: hidden;
-	}
-} 
+    &:before,
+    &:after {
+        content: "";
+        display: table;
+    }
+    &:after {
+        clear: both;
+        overflow: hidden;
+    }
+}
 
 /*文字单行超出显示省略号*/
 @define-mixin otw {
@@ -29,25 +29,102 @@
 }
 
 /*局部内容滚动*/
-@define-mixin content-scroll $width:4px {
-    &::-webkit-scrollbar {
-        width: $width;
-        height:$width;
+@define-mixin contentScroll $selector, $width:4px {
+    .$(selector) {
+        overflow: auto;
+        @mixin-content;
     }
-    &::-webkit-scrollbar-track-piece {
+    .$(selector)::-webkit-scrollbar {
+        width: $(width);
+        height: $(width);
+    }
+    .$(selector)::-webkit-scrollbar-track-piece {
         background-color: #efefef;
     }
-    &::-webkit-scrollbar-thumb:vertical {
+    .$(selector)::-webkit-scrollbar-thumb:vertical {
         background-color: #aaa;
-        border-radius: $width;
+        border-radius: $(width);
     }
-    &::-webkit-scrollbar-thumb:horizontal {
+    .$(selector)::-webkit-scrollbar-thumb:horizontal {
         background-color: #aaa;
-        border-radius: $width;
+        border-radius: $(width);
     }
-    &::-webkit-scrollbar-thumb:hover {
+    .$(selector)::-webkit-scrollbar-thumb:hover {
         background-color: #999;
     }
 }
 
+/*页脚总是在底部*/
+@define-mixin alwaysBottom $layout, $layout-footer, $footer, $footer-height {
+    .$(layout) {
+        clear: both;
+        min-height: 100%;
+        height: auto !important;
+        height: 100%;
+        margin-bottom: -$(footer-height);
+        .$(layout-footer) {
+            height: $(footer-height);
+        }
+    }
+    .$(footer) {
+        clear: both;
+        position: relative;
+        height: $(footer-height);
+        @mixin-content;
+    }
+}
 
+/*竖屏时使用的样式*/
+@define-mixin portrait {
+    @media all and (orientation:portrait) {
+        @mixin-content;
+    }
+}
+
+/*横屏时使用的样式*/
+@define-mixin landscape {
+    @media all and (orientation:landscape) {
+        @mixin-content;
+    }
+}
+
+/*最后一行文字两端对齐*/
+@define-mixin textAlignLast $width:100%{
+    display: inline-block;
+    width: $(width);
+    overflow: hidden;
+    text-align: justify;
+    text-justify: distribute-all-lines;
+    text-align-last: justify;
+    -moz-text-align-last: justify;
+    -webkit-text-align-last: justify;
+    @mixin-content;
+    &:after {
+        content: "";
+        width: 100%;
+        display: inline-block;
+    }
+}
+
+/*长宽比效果-配合postcss-calc插件*/
+@define-mixin aspectRatio $aspectBoxContent, $rw:16, $rh:9{
+    position: relative;
+    &::before {
+        content: '';
+        display: block;
+        width: 1px;
+        margin-left: -1px;
+        height: 0;
+        padding-top: calc($(rh)/$(rw)*100)%;
+    }
+    .$(aspectBoxContent){
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        @mixin-content;
+    }
+}
