--- a/app/pages/index/index.css
+++ b/app/pages/index/index.css
@@ -1,79 +1,129 @@
-@import '../../assets/css/_variable.css';
-@import '../../assets/css/_mixins.css';
-@import '../../assets/css/_extends.css';
 
-#index{
-	ul.affixNav{
-		&.affix {
-			top: 30px;
-		}
-		li{
-			border: 1px solid #DDDDDD;
-			overflow: hidden;
-			margin-top: 0px !important;
-			&+li{
-				border-top: 0 none;
-			}
-			&:first-child{
-				border-radius: 4px 4px 0 0;
-			}
-			&:last-child{
-				border-radius: 0 0 4px 4px;
-			}
-			&.active{
-				border: 0 none;
-			}
-			a{
-				border-radius: 0;
-				text-transform: uppercase;
-			}
-		}
-	}
-	.content {
-		.category{
-			margin-top: 0px;
-			padding: 5px;
-			border-radius: 4px;
-			text-transform: uppercase;
-		}
-		a{
-			color: #666666;
-			text-decoration: none;
-			text-align: center;
-			span{
-				display: block;
-				padding: 3px;
-			}
-		}
-	}
+@import "../../assets/css/_variable.css";
+
+body {
+	background-color: #fff;
+}
+.nav-container {
+    background: rgba(74,74,74,.38);
+    .nav-bar {
+        max-width: $maxWidth;
+        min-width: $minWidth;
+        padding-right: 15px;
+        padding-left: 15px;
+        margin: 0 auto;
+        height: 40px;
+        display: flex;
+        align-items: stretch;
+        justify-content: space-between;
+    }
 }
 
-.aspect-box{
-    position: relative;
-	&::before {
-		content: '';
-		display: block;
-		width: 1px;
-		margin-left: -1px;
-		height: 0
-	}
-	.aspect-box-content{
-		position: absolute;
-		top: 0;
-		left: 0;
-		bottom: 0;
-		right: 0;
-		width: 100%;
-		height: 100%;
-	    overflow: hidden;
-	    img{
-	    	display: block;
-	    	width: 100%;
-	    	height: 100%;
-	    	object-fit: cover;
-	    }
+.nav-bar__logo {
+	flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+.nav-bar__nav {
+	list-style-type: none;
+	margin: 0;
+	display: flex;
+    align-items: stretch;
+    flex-shrink: 0;
+	li {
+        display: flex;
+        align-items: center;
+        margin: 0 12px;
+        padding: 0 1px;
+		font-size: 14px;
+		color: #fff;
+        border-bottom: 0;
+        a {
+            color: #fff;
+            text-transform: capitalize;
+            text-decoration: none;
+            &:hover {
+                color: #ededed;
+            }
+        }
+        &.active {
+             border-bottom: 2px solid rgb(255, 255, 255);
+        }
 	}
 }
-.aspect-box[aspect-ratio="16:10"]{
-	aspect-ratio: '16:10';
+
+.footer-container {
+    background: rgba(74,74,74,.38);
+    .footer-bar {
+        max-width: $maxWidth;
+        min-width: $minWidth;
+        padding-right: 15px;
+        padding-left: 15px;
+        margin: 0 auto;
+        height: 30px;
+        line-height: 30px;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        span{
+            display: inline-block;
+            margin-left: 10px;
+            font-size: 12px;
+        }
+    }
 }
+
+html,
+body,
+.carousel,
+.carousel-inner,
+.carousel-item {
+    height: 100%;
+}
+.carousel {
+    min-width: $minWidth;
+    .carousel-control-prev,
+    .carousel-control-next {
+        span{
+            width: 30px;
+            height: 50px;
+        }
+    }
+    .carousel-indicators {
+        bottom: 60px;
+    }
+    .carousel-item {
+        background-color: #ececec;
+        img {
+            display: block;
+            height: 100%;
+        }
+        .carousel-caption {
+            position: absolute;
+            top: 15%;
+            right: 15%;
+            bottom: 15%;
+            left: 15%;
+            z-index: 10;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+            text-align: left;
+            h3 {
+                font-size: 45px;
+                width: 80%;
+                max-width: 600px;
+            }
+            p {
+                font-size: 16px;
+                width: 80%;
+                max-width: 600px;
+            }
+        }
+    }
+}
+
