--- a/app/pages/index/index.css
+++ b/app/pages/index/index.css
@@ -1,16 +1,17 @@
 
 @import "../../assets/css/_variable.css";
+@import "../../assets/css/font-awesome.css";
 
 body {
 	background-color: #fff;
 }
 .nav-container {
     background: rgba(74,74,74,.38);
+    min-width: $minWidth;
     .nav-bar {
         max-width: $maxWidth;
-        min-width: $minWidth;
-        padding-right: 15px;
-        padding-left: 15px;
+        padding-right: $boundaryDistance;
+        padding-left: $boundaryDistance;
         margin: 0 auto;
         height: 40px;
         display: flex;
@@ -28,7 +29,8 @@ body {
 }
 .nav-bar__nav {
 	list-style-type: none;
-	margin: 0;
+	margin: 0 0 0 30px;
+    padding: 0;
 	display: flex;
     align-items: stretch;
     flex-shrink: 0;
@@ -54,13 +56,54 @@ body {
 	}
 }
 
+.nav-bar__search {
+    position: relative;
+    margin-left: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    margin-top: 7px;
+    border-radius: 5px;
+    overflow: hidden;
+    height: 26px;
+    input {
+        border: 0;
+        width: 100%;
+        height: 26px;
+        font-size: 15px;
+        background-color: rgba(255,255,255,.4);
+        padding-left: 8px;
+        padding-right: 34px;
+        color: #fff;
+    }
+    button {
+        position: absolute;
+        cursor: pointer;
+        width: 34px;
+        height: 26px;
+        background-color: rgba(255, 255, 255, 0);
+        outline: 0;
+        top: 0;
+        right: 0;
+        margin: 0;
+        padding: 0;
+        border: 0;
+        .icon-search {
+            color: #fff;
+            font-size: 16px;
+            font-weight: 100;
+        }
+    }
+}
+
 .footer-container {
     background: rgba(74,74,74,.38);
+    min-width: $minWidth;
     .footer-bar {
         max-width: $maxWidth;
-        min-width: $minWidth;
-        padding-right: 15px;
-        padding-left: 15px;
+        padding-right: $boundaryDistance;
+        padding-left: $boundaryDistance;
         margin: 0 auto;
         height: 30px;
         line-height: 30px;
