--- a/app/pages/index/index.css
+++ b/app/pages/index/index.css
@@ -126,6 +126,9 @@ body,
 .carousel-item {
     height: 100%;
 }
+.carousel-item {
+    overflow: hidden;
+}
 .carousel {
     min-width: $minWidth;
     .carousel-control-prev,
@@ -142,7 +145,11 @@ body,
         background-color: #ececec;
         img {
             display: block;
+            min-width: 100%;
+            min-height: 100%;
+            width: 100%;
             height: 100%;
+            object-fit: cover;
         }
         .carousel-caption {
             position: absolute;
@@ -151,10 +158,10 @@ body,
             bottom: 15%;
             left: 15%;
             z-index: 10;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: center;
+            /*display: flex;*/
+            /*flex-direction: column;*/
+            /*align-items: flex-start;*/
+            /*justify-content: center;*/
             text-align: left;
             h3 {
                 font-size: 45px;
