--- a/app/components/best-choice/best-choice.css
+++ b/app/components/best-choice/best-choice.css
@@ -1,11 +1,7 @@
 @import "../../assets/css/_variable.css";
-@import "../../components/header/header.css";
-@import "../../components/giant-screen/giant-screen.css";
-@import "../../components/category/category.css";
-@import "../../components/footer/footer.css";
 
 .best-choice {
-    max-width: $maxWidth;
+    max-width: 1024px;
     min-width: $minWidth;
     padding-right: $boundaryDistance;
     padding-left: $boundaryDistance;
@@ -26,6 +22,12 @@
     a {
         font-size: 16px;
         color: rgb(74, 74, 74);
+    }
+}
+
+@media all and (max-width: 900px) {
+    .best-choice__items .item {
+        width: 25%;
     }
 }
 
@@ -71,67 +73,6 @@
                         color: rgb(74, 74, 74);
                     }
                 }
-            }
-        }
-    }
-}
-
-.news-list {
-    max-width: $maxWidth;
-    min-width: $minWidth;
-    padding-right: $boundaryDistance;
-    padding-left: $boundaryDistance;
-    margin: 0 auto;
-    padding-top: 30px;
-}
-
-.news-list__head {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 10px;
-    h5 {
-        font-size: 18px;
-        color: rgb(74, 74, 74);
-        margin-bottom: 0;
-    }
-    a {
-        font-size: 16px;
-        color: rgb(74, 74, 74);
-    }
-}
-.news-list__items {
-    margin-top: 20px;
-    list-style-type: none;
-    padding: 0;
-    border-radius: 2px;
-    border: 1px solid #f1f1f1;
-    overflow: hidden;
-    /*box-shadow: 0 1px 2px 0 rgb(203, 202, 202);*/
-    .item {
-        display: flex;
-        align-content: flex-start;
-        border-bottom: solid 1px rgb(239, 239, 239);
-        padding: 10px;
-        .pic {
-            flex-shrink: 0;
-            min-width: 250px;
-            width: 25%;
-            overflow: hidden;
-            border-radius: 2px;
-            img {
-                width: 100%;
-            }
-        }
-        .body {
-            color: rgb(74, 74, 74);
-            flex-grow: 1;
-            margin-left: 20px;
-            h5 {
-                font-size: 20px;
-            }
-            p {
-                font-size: 14px;
             }
         }
     }
