--- a/app/components/category/category.html
+++ b/app/components/category/category.html
@@ -5,22 +5,22 @@
         </li>
         <li>
             <a href="javascript:void(0);">
-                <i></i><strong>Attraction</strong>
+                <i class="icon icon-attraction"></i><strong>Attraction</strong>
             </a>
         </li>
         <li>
             <a href="javascript:void(0);">
-                <i></i><strong>Restaurant</strong>
+                <i class="icon icon-restaurannt"></i><strong>Restaurant</strong>
             </a>
         </li>
         <li>
             <a href="javascript:void(0);">
-                <i></i><strong>Tour</strong>
+                <i class="icon icon-tour"></i><strong>Tour</strong>
             </a>
         </li>
         <li>
             <a href="javascript:void(0);">
-                <i></i><strong>Souvenir</strong>
+                <i class="icon icon-souvenir"></i><strong>Souvenir</strong>
             </a>
         </li>
     </ul>
