--- a/app/components/header/header-dark.html
+++ b/app/components/header/header-dark.html
@@ -1,4 +1,4 @@
-<div class="nav-container fixed-top">
+<div class="dark-nav-container fixed-top">
     <nav class="nav-bar">
         <div class="nav-bar__logo">
             BALI
