--- a/app/components/header/header-has-search.html
+++ b/app/components/header/header-has-search.html
@@ -1,7 +1,7 @@
 <div class="nav-container fixed-top">
 	<nav class="nav-bar">
 		<div class="nav-bar__logo">
-			LOGO
+			BALI
 		</div>
 		<div class="nav-bar__search">
 			<input type="text">
@@ -10,23 +10,23 @@
 			</button>
 		</div>
 		<ul class="nav-bar__nav">
-			<li class="active">
-				<a href="#">Home</a>
+			<li data-role="navItem" data-target="index">
+				<a href="./index.html">Home</a>
 			</li>
-			<li>
-				<a href="#">About Us</a>
+			<li data-role="navItem" data-target="aboutUs">
+				<a href="./about-us.html">About Us</a>
 			</li>
-			<li>
-				<a href="#">About Bali</a>
+			<li data-role="navItem" data-target="aboutBali">
+				<a href="./about-bali.html">About Bali</a>
 			</li>
-			<li>
-				<a href="#">Download Apps</a>
+			<li data-role="navItem" data-target="download">
+				<a href="javascript:void(0);">Download Apps</a>
 			</li>
-			<li>
-				<a href="#">Log In</a>
+			<li data-role="navItem" data-target="login">
+				<a href="javascript:void(0);">Log In</a>
 			</li>
-			<li>
-				<a href="#">Register</a>
+			<li data-role="navItem" data-target="register">
+				<a href="javascript:void(0);">Register</a>
 			</li>
 		</ul>
 	</nav>
