--- a/app/components/giant-screen/giant-screen.html
+++ b/app/components/giant-screen/giant-screen.html
@@ -1,3 +1,3 @@
 <div class="giant-screen">
-    <img src="../../assets/img/img-1@2x.jpg" alt="">
+    <img src="../../assets/img/giant-screen.jpg" alt="">
 </div>
