--- a/app/pages/index/index.css
+++ b/app/pages/index/index.css
@@ -3,6 +3,7 @@
 @import "../../components/category/category.css";
 @import "../../components/best-choice/best-choice.css";
 @import "../../components/news-list/news-list.css";
+@import "../../components/modal/modal.css";
 
 body {
 	background-color: #fff;
