--- a/app/components/header/header.css
+++ b/app/components/header/header.css
@@ -45,7 +45,7 @@
         font-size: 14px;
         color: #fff;
         border-bottom: 0;
-        a {
+        .link {
             color: #fff;
             text-transform: capitalize;
             text-decoration: none;
@@ -97,5 +97,153 @@
             font-size: 16px;
             font-weight: 100;
         }
+    }
+}
+
+.form-login {
+    padding: 12px;
+    margin-top: 20px;
+    width: 300px;
+    border-radius: 5px;
+    background-color: rgb(255, 255, 255);
+    border: 0;
+    h4 {
+        font-size: 18px;
+        text-align: center;
+        color: rgb(74, 74, 74);
+        text-transform: capitalize;
+        padding-bottom: 12px;
+        margin: 0;
+    }
+    p {
+        padding: 4px 4px 20px 4px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 0;
+        a {
+            font-size: 14px;
+            color: rgb(155, 155, 155);
+            text-decoration: none;
+        }
+    }
+}
+
+.login-ipt-warpper {
+    margin-bottom: 6px;
+    position: relative;
+    input {
+        height: 35px;
+        display: block;
+        border-radius: 2px;
+        background-color: rgb(239, 239, 239);
+        color: rgb(203, 202, 202);
+        font-size: inherit;
+        border: 0;
+        padding-left: 6px;
+        padding-right: 30px;
+        box-sizing: border-box;
+        width: 100%;
+    }
+}
+
+.login-btn-warpper {
+    margin-top: 4px;
+    button {
+        height: 35px;
+        border-radius: 2px;
+        cursor: pointer;
+        display: block;
+        width: 100%;
+        border: 0;
+    }
+    .btn-login {
+        background-color: rgb(74, 74, 74);
+        font-size: 16px;
+        color: #fff;
+    }
+    .btn-cancel {
+        color: rgb(155, 155, 155);
+        font-size: 14px;
+        background: #fff;
+    }
+}
+
+.profile {
+    padding: 15px;
+    margin-top: 20px;
+    width: 250px;
+    border-radius: 2px;
+    background-color: rgb(255, 255, 255);
+    border: 0;
+}
+
+.profile-head {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 14px;
+}
+
+.profile-head-pic {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #eee;
+    flex-shrink: 0;
+    margin-right: 10px;
+    cursor: pointer;
+    img {
+        max-width: 100%;
+        max-height: 100%;
+        display: block;
+    }
+}
+
+.profile-head-info {
+    flex-grow: 1;
+    margin-right: 10px;
+    p {
+        margin: 0;
+        color: rgb(74, 74, 74);
+    }
+    .name {
+        font-size: 16px;
+        font-weight: bold;
+        line-height: 1.5;
+    }
+    .phone {
+        font-size: 12px;
+        line-height: 1;
+    }
+    .email {
+        font-size: 12px;
+        line-height: 1;
+    }
+}
+
+.profile-head-icon {
+    display: block;
+    width: 16px;
+    height: 16px;
+    background: #eee;
+}
+
+.profile-item {
+    display: block;
+    width: 100%;
+    font-size: 13px;
+    font-weight: 500;
+    color: rgb(74, 74, 74);
+    height: 30px;
+    line-height: 30px;
+    text-align: left;
+    border-bottom: solid 1px rgb(249, 249, 249);
+    text-decoration: none;
+    padding-left: 2px;
+    &:hover {
+        color: rgb(74, 74, 74);
+        text-decoration: none;
+        opacity: .7;
     }
 }
