--- a/app/components/header/header-has-search.html
+++ b/app/components/header/header-has-search.html
@@ -9,25 +9,6 @@
 				<i class="icon-search"></i>
 			</button>
 		</div>
-		<ul class="nav-bar__nav">
-			<li data-role="navItem" data-target="index">
-				<a href="./index.html">Home</a>
-			</li>
-			<li data-role="navItem" data-target="aboutUs">
-				<a href="./about-us.html">About Us</a>
-			</li>
-			<li data-role="navItem" data-target="aboutBali">
-				<a href="./about-bali.html">About Bali</a>
-			</li>
-			<li data-role="navItem" data-target="download">
-				<a href="javascript:void(0);">Download Apps</a>
-			</li>
-			<li data-role="navItem" data-target="login">
-				<a href="javascript:void(0);">Log In</a>
-			</li>
-			<li data-role="navItem" data-target="register">
-				<a href="javascript:void(0);">Register</a>
-			</li>
-		</ul>
+		#include("../../components/header/nav.html")
 	</nav>
 </div>
