--- a/app/components/header/header.css
+++ b/app/components/header/header.css
@@ -37,7 +37,7 @@
     display: flex;
     align-items: stretch;
     flex-shrink: 0;
-    li {
+    .nav-item {
         display: flex;
         align-items: center;
         margin: 0 12px;
@@ -106,7 +106,7 @@
     width: 300px;
     border-radius: 5px;
     background-color: rgb(255, 255, 255);
-    border: 0;
+    border: 1px solid #eee;
     h4 {
         font-size: 18px;
         text-align: center;
@@ -175,7 +175,7 @@
     width: 250px;
     border-radius: 2px;
     background-color: rgb(255, 255, 255);
-    border: 0;
+    border: 1px solid #eee;
 }
 
 .profile-head {
