--- a/app/components/modal/modal.css
+++ b/app/components/modal/modal.css
@@ -1,17 +1,18 @@
-.modal-content {
+/* 忘记密码第一步 */
+.modal-content__forget-1 {
   width: 350px;
   border-radius: 5px;
   background-color: rgb(255, 255, 255);
   border: 0;
-  padding: 30px 45px 36px;
-}
-
-.forget-head {
-  font-size: 18px;
-  font-weight: bold;
-  text-align: center;
-  color: rgb(74, 74, 74);
-  margin: 0;
+  padding: 30px 40px 36px;
+  margin: 0 auto;
+  .head {
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    color: rgb(74, 74, 74);
+    margin: 0;
+  }
 }
 
 .tab {
@@ -28,6 +29,7 @@
       text-align: right;
       color: rgb(155, 155, 155);
       padding: 0 4px 2px;
+      text-decoration: none;
       border-bottom: 3px solid #fff;
       &.active {
         border-bottom: 3px solid rgb(74, 74, 74);
@@ -36,7 +38,7 @@
   }
   .tab-body {
     margin-top: 14px;
-    .forget-ipt-warpper {
+    .ipt-warpper {
       height: 40px;
       border-radius: 2px;
       border: solid 1px rgb(203, 202, 202);
@@ -144,6 +146,9 @@
   width: 200px;
   cursor: pointer;
   background: #fff;
+  &:focus {
+    outline: 0;
+  }
   span {
     font-size: 15px;
     color: rgb(74, 74, 74);
@@ -165,4 +170,229 @@
   background: #fff;
   outline: 0;
   cursor: pointer;
+  &:focus {
+    outline: 0;
+  }
+}
+
+/* 忘记密码第二步 */
+.modal-content__forget-2 {
+  width: 300px;
+  padding: 20px 40px;
+  margin: 0 auto;
+  .head {
+    font-size: 16px;
+    font-weight: normal;
+    text-align: center;
+    color: rgb(74, 74, 74);
+    margin: 0;
+  }
+  .ipt-code {
+    margin-top: 20px;
+    input {
+      width: 100%;
+      height: 50px;
+      display: block;
+      text-align: center;
+    }
+  }
+  .re-send-code{
+    margin-top: 20px;
+    text-align: center;
+    button {
+      height: 30px;
+      cursor: pointer;
+      border: 0;
+      outline: 0;
+    }
+  }
+  .tips {
+    margin-top: 30px;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+}
+
+/* 忘记密码第三步 */
+.modal-content__forget-3 {
+  margin: 0 auto;
+  width: 300px;
+  padding: 20px 40px;
+  .ipt-warpper {
+    margin-top: 15px;
+    height: 40px;
+    border-radius: 2px;
+    border: solid 1px rgb(203, 202, 202);
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 8px;
+    .addon {
+      flex-shrink: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      i {
+        margin-right: 4px;
+        width: 16px;
+        height: 16px;
+        background: #eee;
+      }
+    }
+    .ipt {
+      flex-grow: 1;
+      input {
+        width: 100%;
+        border: 0;
+        outline: 0;
+        font-size: 14px;
+        color: rgb(155, 155, 155);
+        padding-left: 5px;
+        padding-right: 5px;
+      }
+    }
+  }
+  .head {
+    font-size: 16px;
+    font-weight: normal;
+    text-align: center;
+    color: rgb(74, 74, 74);
+    margin: 0;
+  }
+  .btn-reset {
+    margin-top: 28px;
+    padding-bottom: 10px;
+    button {
+      height: 30px;
+      width: 100%;
+      cursor: pointer;
+    }
+  }
+}
+
+/* 注册第一步 */
+.modal-content__reg-1 {
+  width: 350px;
+  border-radius: 5px;
+  background-color: rgb(255, 255, 255);
+  border: 0;
+  padding: 30px 40px 36px;
+  margin: 0 auto;
+  .head {
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    color: rgb(74, 74, 74);
+    margin: 0;
+  }
+}
+
+/* 注册第二步 */
+.modal-content__reg-2 {
+  width: 300px;
+  padding: 20px 40px;
+  margin: 0 auto;
+  .head {
+    font-size: 16px;
+    font-weight: normal;
+    text-align: center;
+    color: rgb(74, 74, 74);
+    margin: 0;
+  }
+  .ipt-code {
+    margin-top: 20px;
+    input {
+      width: 100%;
+      height: 50px;
+      display: block;
+      text-align: center;
+    }
+  }
+  .re-send-code{
+    margin-top: 20px;
+    text-align: center;
+    button {
+      height: 30px;
+      cursor: pointer;
+      border: 0;
+      outline: 0;
+    }
+  }
+  .tips {
+    margin-top: 30px;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+}
+
+/* 注册第三步 */
+.modal-content__reg-3 {
+  margin: 0 auto;
+  width: 350px;
+  padding: 20px 40px;
+  .head {
+    width: 80px;
+    height: 80px;
+    background: #eee;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0 auto;
+  }
+  .ipt-warpper {
+    margin-top: 15px;
+    height: 40px;
+    border-radius: 2px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 8px;
+    border-bottom: solid 1px rgb(203, 202, 202);
+    .addon-before {
+      flex-shrink: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      i {
+        margin-right: 4px;
+        width: 16px;
+        height: 16px;
+        background: #eee;
+      }
+    }
+    .addon-after {
+      flex-shrink: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      i {
+        margin-right: 4px;
+        width: 16px;
+        height: 16px;
+        background: #eee;
+      }
+    }
+    .ipt {
+      flex-grow: 1;
+      input {
+        width: 100%;
+        border: 0;
+        outline: 0;
+        font-size: 14px;
+        color: rgb(155, 155, 155);
+        padding-left: 5px;
+        padding-right: 5px;
+      }
+    }
+  }
+  .btn-reset {
+    margin-top: 28px;
+    padding-bottom: 10px;
+    button {
+      height: 30px;
+      width: 100%;
+      cursor: pointer;
+    }
+  }
 }
